--- a/docs/script/sudt-script.mdx
+++ b/docs/script/sudt-script.mdx
@@ -8,10 +8,25 @@ import TabItem from "@theme/TabItem";
 import TutorialHeader from "@components/TutorialHeader";
 import Tooltip from "@components/Tooltip";
 import ScriptTools from "./_ScriptTools.mdx";
+import Link from "@docusaurus/Link";
 
 # Tutorial: Simple UDT Script
 
-<TutorialHeader time={"5 - 7 min"} tools={"script"} />
+<TutorialHeader
+  time={"5 - 7 min"}
+  tools={"script"}
+  customTools={[
+    <div key="offckb">
+      <Link
+        to="docs/sdk-and-devtool/offckb"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        offckb {">= 0.3.2"}
+      </Link>
+    </div>,
+  ]}
+/>
 
 User-Defined Token (UDT) is a fungible token standard on CKB blockchain.
 
