--- a/docs/script/type-id.mdx
+++ b/docs/script/type-id.mdx
@@ -1,17 +1,14 @@
 ---
 id: type-id
-title: "Tutorial: Upgradable Scripts with Type ID"
+title: "Type ID: Upgradable Scripts"
 ---
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import TutorialHeader from "@components/TutorialHeader";
 import ScriptTools from "./_ScriptTools.mdx";
 import Tooltip from "@components/Tooltip";
 
-# Tutorial: Type ID (Upgradable Script)
-
-<TutorialHeader time={"5 - 10 min"} tools={"script"} />
+# Type ID: Upgradable Scripts
 
 Scripts are codes that execute on-chain and cannot be stopped. However, sometimes you might want to ensure your Script is upgradable in case there are bugs in the source code.
 
